# Trading-bot-2

./: .env.example  .gitignore  Dockerfile.backend  Dockerfile.frontend  README.md  docker-compose.yml  pyproject.toml  start_propos.bat  start_propos.ps1
backend/: __init__.py  app.py  main.py  orchestrator.py
backend/api/: __init__.py  websocket.py
backend/api/routes/: __init__.py  controls.py  dashboard.py  health.py
backend/compliance/: __init__.py  engine.py
backend/core/: __init__.py  config.py  events.py  logging.py  scheduler.py  state.py
backend/execution/: __init__.py  engine.py  mt5_executor.py
backend/filters/: __init__.py  base.py  chain.py  news_filter.py  session_filter.py  spread_filter.py  volatility_filter.py
backend/market_data/: __init__.py  base.py  mt5_provider.py
backend/models/: __init__.py  account.py  compliance.py  market.py  order.py  risk.py  signal.py
backend/monitoring/: __init__.py  health.py  telegram.py
backend/protection/: __init__.py  connection_monitor.py  kill_switch.py
backend/risk/: __init__.py  engine.py
backend/router/: __init__.py  engine.py
backend/storage/: __init__.py  database.py  models.py  repository.py
backend/strategy/: __init__.py  base.py  breakout.py  registry.py  trend_pullback.py
config/: accounts.yaml  settings.yaml
config/firms/: e8.yaml  ftmo.yaml  fundednext.yaml  the5ers.yaml
frontend/: next.config.js  package-lock.json  package.json  tailwind.config.js
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/lib/: api.ts  ws.ts
frontend/src/types/: index.ts
(+9 files in other folders)
