[project]
name = "propos"
version = "1.0.0"
description = "PropOS — Multi-Account Prop Trading Operating System"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "websockets>=12.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "pyyaml>=6.0",
    "sqlalchemy>=2.0",
    "aiosqlite>=0.19.0",
    "MetaTrader5>=5.0.45",
    "pandas>=2.1.0",
    "numpy>=1.26.0",
    "pandas-ta>=0.3.14b1",
    "python-telegram-bot>=20.7",
    "apscheduler>=3.10.4",
    "structlog>=24.1.0",
    "httpx>=0.26.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "ruff>=0.2.0",
    "mypy>=1.8",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
